# blade-py

./: .changes.md  .hub-home-update.md  .spec.toml  BLADE_UPGRADE.md  DATA_VS_SCAN.md  DEPLOYMENT.md  GIT_DEPS_GUIDE.md  META_PROCESS.txt  MIGRATION.md  README.md  START.txt  TODO.txt  VALIDATION_REPORT.md  benchmark_qol01.py  blade-config.sh  blade-repo.py  blade.py  cargo_git_fixer.py  logo.txt  pyproject.toml  version_utils.py
_archive/: TODO.old.txt
docs/dev/: META_PROCESS.md
docs/procs/: ADD.txt  DONE.txt  HANDOFF.md  PROCESS.txt  QUICK_REF.txt  ROADMAP.txt  TASKS.txt
docs/ref/: UAT_COMMANDS.md
tests/: __init__.py  test_version_utils.py
